WS-11.0.4 <Michael Chinn@kaunas Update MichaelChinn lodash.xml, MichaelChinn.xml

--- a/templates/MichaelChinn.xml
+++ b/templates/MichaelChinn.xml
@@ -198,4 +198,13 @@
       <option name="JS_STATEMENT" value="true" />
     </context>
   </template>
+  <template name="getConstructor" value="var $name$ = classes.getConstructor('$name$');$END$" description="classes.getConstructor" toReformat="false" toShortenFQNames="true">
+    <variable name="name" expression="" defaultValue="" alwaysStopAt="true" />
+    <context>
+      <option name="JAVA_SCRIPT" value="true" />
+      <option name="JS_EXPRESSION" value="true" />
+      <option name="JSX_HTML" value="true" />
+      <option name="JS_STATEMENT" value="true" />
+    </context>
+  </template>
 </templateSet>
