--- a/templates/MichaelChinn lodash.xml
+++ b/templates/MichaelChinn lodash.xml
@@ -63,4 +63,23 @@
       <option name="JS_STATEMENT" value="true" />
     </context>
   </template>
+  <template name="_.findfunc" value="_.find($collection$, function(n){&#10;    return $END$;&#10;});" description="lodash find function" toReformat="false" toShortenFQNames="true">
+    <variable name="collection" expression="" defaultValue="" alwaysStopAt="true" />
+    <context>
+      <option name="JAVA_SCRIPT" value="true" />
+      <option name="JS_EXPRESSION" value="true" />
+      <option name="JSX_HTML" value="true" />
+      <option name="JS_STATEMENT" value="true" />
+    </context>
+  </template>
+  <template name="_.findprop" value="_.find($collection$, {$prop$: $prop$});" description="lodash find object shorthand" toReformat="false" toShortenFQNames="true">
+    <variable name="collection" expression="" defaultValue="" alwaysStopAt="true" />
+    <variable name="prop" expression="" defaultValue="" alwaysStopAt="true" />
+    <context>
+      <option name="JAVA_SCRIPT" value="true" />
+      <option name="JS_EXPRESSION" value="true" />
+      <option name="JSX_HTML" value="true" />
+      <option name="JS_STATEMENT" value="true" />
+    </context>
+  </template>
 </templateSet>
