WS-11.0.4 <Michael Chinn@kaunas Update MichaelChinn Angular.xml

--- a/templates/MichaelChinn Angular.xml
+++ b/templates/MichaelChinn Angular.xml
@@ -136,4 +136,14 @@
       <option name="JS_STATEMENT" value="true" />
     </context>
   </template>
+  <template name="$uibModalOpen" value="$uibModal.open({&#10;templaeUrl: '$url$',&#10;controller: '$con$ as vm',&#10;resolve: {}&#10;});" description="modal creation angular bootstrap" toReformat="false" toShortenFQNames="true">
+    <variable name="url" expression="" defaultValue="" alwaysStopAt="true" />
+    <variable name="con" expression="" defaultValue="" alwaysStopAt="true" />
+    <context>
+      <option name="JAVA_SCRIPT" value="true" />
+      <option name="JS_EXPRESSION" value="true" />
+      <option name="JSX_HTML" value="true" />
+      <option name="JS_STATEMENT" value="true" />
+    </context>
+  </template>
 </templateSet>
