--- a/templates/MichaelChinn.xml
+++ b/templates/MichaelChinn.xml
@@ -207,8 +207,9 @@
       <option name="JS_STATEMENT" value="true" />
     </context>
   </template>
-  <template name="getset" value="function get$prop$() {&#10;    return $prop$;&#10;} &#10;&#10;function set$prop$(input) {&#10;    service.$prop$ = input;&#10;}&#10;&#10;$END$" description="getter and setter method for service" toReformat="false" toShortenFQNames="true">
-    <variable name="prop" expression="" defaultValue="" alwaysStopAt="true" />
+  <template name="getset" value="function get$capital$() {&#10;    return $lower$;&#10;} &#10;&#10;function set$capital$(input) {&#10;    $lower$ = input;&#10;}&#10;&#10;$END$" description="getter and setter method for service" toReformat="false" toShortenFQNames="true">
+    <variable name="capital" expression="" defaultValue="" alwaysStopAt="true" />
+    <variable name="lower" expression="" defaultValue="" alwaysStopAt="true" />
     <context>
       <option name="JAVA_SCRIPT" value="true" />
       <option name="JS_EXPRESSION" value="true" />
