--- a/templates/MichaelChinn.xml
+++ b/templates/MichaelChinn.xml
@@ -218,4 +218,13 @@
       <option name="JS_STATEMENT" value="true" />
     </context>
   </template>
+  <template name="getElementById" value="document.getElementById('$id$');&#10;$END$" description="document get element by id" toReformat="false" toShortenFQNames="true">
+    <variable name="id" expression="" defaultValue="" alwaysStopAt="true" />
+    <context>
+      <option name="JAVA_SCRIPT" value="true" />
+      <option name="JS_EXPRESSION" value="true" />
+      <option name="JSX_HTML" value="true" />
+      <option name="JS_STATEMENT" value="true" />
+    </context>
+  </template>
 </templateSet>
