--- a/templates/MichaelChinn.xml
+++ b/templates/MichaelChinn.xml
@@ -227,4 +227,12 @@
       <option name="JS_STATEMENT" value="true" />
     </context>
   </template>
+  <template name="modexp" value="module.exports = $END$;" description="npm module export" toReformat="false" toShortenFQNames="true">
+    <context>
+      <option name="JAVA_SCRIPT" value="true" />
+      <option name="JS_EXPRESSION" value="true" />
+      <option name="JSX_HTML" value="true" />
+      <option name="JS_STATEMENT" value="true" />
+    </context>
+  </template>
 </templateSet>
