WS-2016.3.2 <Michael@RIO Update MichaelChinn Gulp.xml

--- a/templates/MichaelChinn Gulp.xml
+++ b/templates/MichaelChinn Gulp.xml
@@ -5,13 +5,13 @@
       <option name="JAVA_SCRIPT" value="true" />
     </context>
   </template>
-  <template name="gulptask" value="gulp.task('$task$', [], function() {&#10;    return gulp.src()&#10;    .pipe(gulp.dest());$END$&#10;}); " description="creates a gulp task" toReformat="false" toShortenFQNames="true">
+  <template name="gulptask" value="gulp.task('$task$', [], function() {&#10;    $END$&#10;}); " description="creates a gulp task" toReformat="false" toShortenFQNames="true">
     <variable name="task" expression="" defaultValue="" alwaysStopAt="true" />
     <context>
       <option name="JAVA_SCRIPT" value="true" />
     </context>
   </template>
-  <template name="gsrc" value="gulp.src($src$)&#10;    $END$&#10;    .pipe(gulp.dest());" description="gulp.src" toReformat="false" toShortenFQNames="true">
+  <template name="gulpsrc" value="return gulp.src($src$)&#10;    $END$&#10;    .pipe(gulp.dest());" description="gulp.src and gulp.dest" toReformat="false" toShortenFQNames="true">
     <variable name="src" expression="" defaultValue="" alwaysStopAt="true" />
     <context>
       <option name="JAVA_SCRIPT" value="true" />
