--- a/templates/MichaelChinn Gulp.xml
+++ b/templates/MichaelChinn Gulp.xml
@@ -64,4 +64,10 @@
       <option name="JAVA_SCRIPT" value="true" />
     </context>
   </template>
+  <template name="gulpwatch" value="gulp.task('watch-$name$', [], function() {&#10;    console.log('watching $name$');&#10;    return gulp.watch('$name$/**/*', ['$name$']);$END$&#10;});" description="gulp watch function" toReformat="false" toShortenFQNames="true">
+    <variable name="name" expression="" defaultValue="" alwaysStopAt="true" />
+    <context>
+      <option name="JAVA_SCRIPT" value="true" />
+    </context>
+  </template>
 </templateSet>
