--- a/templates/MichaelChinn docs.xml
+++ b/templates/MichaelChinn docs.xml
@@ -9,7 +9,7 @@
       <option name="HTML" value="true" />
     </context>
   </template>
-  <template name=".substr" value="//str.substr(start, length)&#10;'hello'.substr(1, 2); // = 'el'&#10;'hello'.substr(1); // = 'o' :: x to end&#10;'hello'.substr(-3); // = 'llo' :: x from end&#10;'hello'.substr(0, 4); // 'hell' :: x from beginning" description="subtr examples" toReformat="false" toShortenFQNames="true">
+  <template name=".substr" value="//str.substr(start, length)&#10;'hello'.substr(1, 2); // = 'el'&#10;'hello'.substr(1); // = 'ello' :: x to end&#10;'hello'.substr(-3); // = 'llo' :: x from end&#10;'hello'.substr(0, 4); // 'hell' :: x from beginning" description="subtr examples" toReformat="false" toShortenFQNames="true">
     <context>
       <option name="JAVA_SCRIPT" value="true" />
     </context>
