--- a/templates/MichaelChinn GulpPipe.xml
+++ b/templates/MichaelChinn GulpPipe.xml
@@ -11,7 +11,7 @@
       <option name="JAVA_SCRIPT" value="true" />
     </context>
   </template>
-  <template name="gulptemplatecache" value=".pipe($.angularTemplatecache({standalone: true})$END$" description="gulp angular templatecache" toReformat="false" toShortenFQNames="true">
+  <template name="gulptemplatecache" value=".pipe($.angularTemplatecache({standalone: true}))$END$" description="gulp angular templatecache" toReformat="false" toShortenFQNames="true">
     <context>
       <option name="JAVA_SCRIPT" value="true" />
     </context>
