WS-2016.3.4 <Michael@RIO Update MichaelChinn GulpPipe.xml

--- a/templates/MichaelChinn GulpPipe.xml
+++ b/templates/MichaelChinn GulpPipe.xml
@@ -84,4 +84,9 @@
       <option name="JAVA_SCRIPT" value="true" />
     </context>
   </template>
+  <template name="$minify" value=".pipe($.minify())$END$" description="gulp pipe minify" toReformat="false" toShortenFQNames="true">
+    <context>
+      <option name="JAVA_SCRIPT" value="true" />
+    </context>
+  </template>
 </templateSet>
