--- a/templates/MichaelChinn Angular.xml
+++ b/templates/MichaelChinn Angular.xml
@@ -93,4 +93,9 @@
       <option name="HTML" value="true" />
     </context>
   </template>
+  <template name="qwrap" value="var deferred = $q.defer();&#10;    $END$&#10;return deferred.promise;" description="$q angular wrap" toReformat="false" toShortenFQNames="true">
+    <context>
+      <option name="JAVA_SCRIPT" value="true" />
+    </context>
+  </template>
 </templateSet>
