WS-2016.3.4 <Michael@RIO Update MichaelChinn Angular.xml, MichaelChinn Express.xml

--- a/templates/MichaelChinn Angular.xml
+++ b/templates/MichaelChinn Angular.xml
@@ -68,9 +68,7 @@
       <option name="JAVA_SCRIPT" value="true" />
     </context>
   </template>
-  <template name="$httpget" value="function get$thing$(request) {&#10;    return $http.get(config.apiUrl + '/$url$', {params: request$END$})&#10;        .then(function (response) {&#10;            return response.data;&#10;        });&#10;}" description="get request" toReformat="false" toShortenFQNames="true">
-    <variable name="thing" expression="" defaultValue="" alwaysStopAt="true" />
-    <variable name="url" expression="" defaultValue="" alwaysStopAt="true" />
+  <template name="$httpresp" value="    .then(function (response) {&#10;        return response.data;&#10;    });$END$&#10;" description="response.data end to $http request" toReformat="false" toShortenFQNames="true">
     <context>
       <option name="JAVA_SCRIPT" value="true" />
     </context>
