--- a/templates/MichaelChinn Express.xml
+++ b/templates/MichaelChinn Express.xml
@@ -1,24 +1,31 @@
 <templateSet group="MichaelChinn Express">
-  <template name="expput" value="app.put('$route$', function(req, res) {&#10;    $END$&#10;   res.json({info: ''}); &#10;});" description="express app put" toReformat="false" toShortenFQNames="true">
+  <template name="expput" value="app.put('$route$', function(req, res) {&#10;    return $schema$.update(req.body)&#10;        .then($END$);&#10;});" description="express app put" toReformat="false" toShortenFQNames="true">
     <variable name="route" expression="" defaultValue="" alwaysStopAt="true" />
+    <variable name="schema" expression="" defaultValue="" alwaysStopAt="true" />
     <context>
       <option name="JAVA_SCRIPT" value="true" />
     </context>
   </template>
-  <template name="expdelete" value="app.delete('$route$', function(req, res) {&#10;    $END$&#10;   res.json({info: ''}); &#10;});" description="express app delete" toReformat="false" toShortenFQNames="true">
+  <template name="expdelete" value="app.delete('$route$', function(req, res) {&#10;    return $schema$.find({$param$})&#10;        .remove()&#10;        .then($END$);&#10;&#10;});" description="express app delete" toReformat="false" toShortenFQNames="true">
     <variable name="route" expression="" defaultValue="" alwaysStopAt="true" />
+    <variable name="schema" expression="" defaultValue="" alwaysStopAt="true" />
+    <variable name="param" expression="" defaultValue="" alwaysStopAt="true" />
     <context>
       <option name="JAVA_SCRIPT" value="true" />
     </context>
   </template>
-  <template name="exppost" value="app.post('$route$', function(req, res) {&#10;    $END$&#10;   res.json({info: ''}); &#10;});" description="express app post" toReformat="false" toShortenFQNames="true">
+  <template name="exppost" value="app.post('$route$', function(req, res) {&#10;   var new$scheme$ = new $schema$(req.body);&#10;   return new$schema$.save()&#10;      .then($END$);&#10;});" description="express app post" toReformat="false" toShortenFQNames="true">
     <variable name="route" expression="" defaultValue="" alwaysStopAt="true" />
+    <variable name="scheme" expression="" defaultValue="" alwaysStopAt="true" />
+    <variable name="schema" expression="" defaultValue="" alwaysStopAt="true" />
     <context>
       <option name="JAVA_SCRIPT" value="true" />
     </context>
   </template>
-  <template name="expget" value="app.get('$route$', function(req, res) {&#10;    $END$&#10;   res.json({info: ''}); &#10;});" description="express app get" toReformat="false" toShortenFQNames="true">
+  <template name="expget" value="app.get('$route$', function(req, res) {&#10;   return $schema$.find($param$)&#10;        .then($END$); &#10;});" description="express app get" toReformat="false" toShortenFQNames="true">
     <variable name="route" expression="" defaultValue="" alwaysStopAt="true" />
+    <variable name="schema" expression="" defaultValue="" alwaysStopAt="true" />
+    <variable name="param" expression="" defaultValue="" alwaysStopAt="true" />
     <context>
       <option name="JAVA_SCRIPT" value="true" />
     </context>
