WS-2017.2.3 <Michael@RIO Update MichaelChinn StateEval.xml

--- a/templates/MichaelChinn StateEval.xml
+++ b/templates/MichaelChinn StateEval.xml
@@ -5,4 +5,11 @@
       <option name="JAVA_SCRIPT" value="true" />
     </context>
   </template>
+  <template name="apiurl" value="var url = config.apiUrl + '$url$';&#10;$END$" description="api url for services" toReformat="false" toShortenFQNames="true">
+    <variable name="url" expression="" defaultValue="" alwaysStopAt="true" />
+    <context>
+      <option name="JAVA_SCRIPT" value="true" />
+      <option name="TypeScript" value="true" />
+    </context>
+  </template>
 </templateSet>
