--- a/templates/MichaelChinn CSS_SCSS.xml
+++ b/templates/MichaelChinn CSS_SCSS.xml
@@ -9,4 +9,10 @@
       <option name="CSS" value="true" />
     </context>
   </template>
+  <template name="imp" value="@import &quot;$temp$&quot;;$END$" description="scss import statement" toReformat="false" toShortenFQNames="true">
+    <variable name="temp" expression="" defaultValue="" alwaysStopAt="true" />
+    <context>
+      <option name="CSS" value="true" />
+    </context>
+  </template>
 </templateSet>
